# odb-lab

./: .gitignore  README.md  build-mac.js  build-win.js  build.js  electron-builder.yml  main.js  package-lock.json  package.json  tailwind.config.ts
backend/: Makefile  README.md  pyproject.toml  server.py  server.spec
backend/config/: logging.py
backend/router/: health_check_router.py  interpreter_router.py
backend/service/: interpreter_service.py
src/main/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/molecules/csv-file-table/: CsvFileTable.tsx
src/renderer/src/components/molecules/input-recipe/: InputRecipe.stories.ts  InputRecipe.tsx
src/renderer/src/components/molecules/select-index/: SelectIndex.stories.ts
src/renderer/src/components/organizms/chat/: ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  ChatUI.tsx  DevelopChatUI.tsx  Input.tsx  TextareaAutosize.tsx
src/renderer/src/components/organizms/footer/: Footer.tsx
src/renderer/src/components/organizms/header/: Header.stories.ts  Header.tsx
src/renderer/src/components/organizms/input-file-list/: InputFileList.stories.tsx  InputFileList.tsx
src/renderer/src/hooks/: use-fetch-csv-file.ts  use-fetch-dataset.ts  use-filter-tag.ts  use-input-prompt.ts  use-run-file.ts  use-search-project.ts
src/renderer/src/lib/fetch/: dataset-search-fetcher.ts  file-fetcher.ts  project-search-fetcher.ts
src/renderer/src/types/: project.d.ts
src/renderer/src/util/: build-dataset-util.ts  build-project-util.ts  cn.ts
(+54 files in other folders)
